--- a/src/views/page.mustache
+++ b/src/views/page.mustache
@@ -5,8 +5,8 @@
     <div class="item">
         <img src="media/{{image}}.jpg" class="item--image" />
         <div class="item--name">{{ name }}</div>
-        <div class="item--color">Preço: {{ price }}</div>
-        <div class="item--color">ingredientes: {{ #ingredients }}{{name}}<br>{{ /ingredients }}</div>
+        <div class="item--color">Preço: {{ price }} reais</div>
+        <div class="item--color">ingredientes: <br>{{ #ingredients }}{{name}}<br>{{ /ingredients }}</div>
     </div>
     {{/list}}
 </div>
